[Ano] #4515 : Disconnect icon alignment fixed.

--- a/assets/themes/leo/css/modules.less
+++ b/assets/themes/leo/css/modules.less
@@ -443,7 +443,6 @@ i.show-calendar.selected{
 i.disconnect{
 	.icon(glyphicons_063_power_white, 35px);
 	margin: 5px;
-	float: right;
 	margin-bottom: -6px;
 }
 
@@ -886,9 +885,11 @@ a.button[disabled]:hover, button[disabled]:hover, input[type=button][disabled]:h
 }
 
 #my-photo{
+    margin-top: 0px;
 	padding: 5px;
 	border-radius: 20px;
 	width: 30px;
+    vertical-align: middle;
 }
 
 .navbar{
